# intraday-x

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  README.md  intraday-engine.spec  pyproject.toml
backend/scripts/: build_sidecar.sh  dev_placeholder.sh
backend/src/intradayx/: __init__.py  cli.py  config.py  desktop_sidecar.py
backend/src/intradayx/api/: app.py  metrics.py  schemas.py  service.py  settings_store.py  ws.py
backend/src/intradayx/api/routes/: analysis.py  market.py  settings.py
backend/src/intradayx/attribution/: catalysts.py  engine.py  labeling.py  learn.py  move_explainer.py  validation.py
backend/src/intradayx/attribution/detectors/: price_volume.py  squeezes.py
backend/src/intradayx/backtest/: fills.py  metrics.py  runner.py  walkforward.py
backend/src/intradayx/data/: cache.py  composite.py  factory.py  provider.py  registry.py  resilience.py
backend/src/intradayx/data/providers/: alpaca_provider.py  fmp_provider.py  polygon_provider.py  twelvedata_provider.py  yfinance_provider.py
backend/src/intradayx/domain/: bars.py  capabilities.py  catalysts.py  earnings.py  events.py  internals.py  options.py  shorts.py  signals.py
backend/src/intradayx/export/: charts.py  csv_export.py  pdf_report.py  thinkscript.py
backend/src/intradayx/features/: climax.py  gaps.py  indicators.py  pipeline.py  pivots.py  session.py  squeeze.py  volatility.py  volume_profile.py
backend/src/intradayx/live/: internals_recorder.py  monitor.py  stream.py
backend/src/intradayx/signals/: accuracy.py  engine.py  forward.py  meta_filter.py  params.py  pead.py  pead_portfolio.py  quality.py  reversal.py  scalping.py  snapshot.py  strategy.py
backend/src/intradayx/storage/: catalog.py  duck.py  lake.py
backend/test-artifacts/: e2e-signal-snapshots.json
backend/tests/: conftest.py
backend/tests/fixtures/: synthetic.py
backend/tests/integration/: test_accuracy.py  test_backtest.py  test_backtest_api.py  test_export.py  test_forward.py  test_parity.py  test_scalping.py  test_settings_api.py  test_signal_engine.py  test_stream.py  test_walkforward.py
backend/tests/unit/: test_cache.py  test_capabilities.py  test_catalysts.py  test_data_layer.py  test_fmp.py  test_fmp_internals.py  test_fmp_pagination.py  test_indicators.py  test_labeling.py  test_meta_filter.py  test_metrics.py  test_move_explainer.py  test_pead.py  test_pead_portfolio.py  test_pivots.py  test_polygon.py  test_quality.py  test_resilience.py  test_squeeze.py  test_thinkscript.py  test_validation.py  test_volatility_features.py  test_volume_profile.py  test_ws_status.py
docs/: AI_LANDMINES.md  ARCHITECTURE.md  DATA_PROVIDERS.md  DESKTOP.md  DESKTOP_APP_PLAN.md  OPERATOR_GUIDE.md  OPERATOR_TODO.md  ROADMAP.md
docs/adr/: 0001-capability-gated-vendor-agnostic-data-layer.md  0002-shared-signal-engine-custom-backtester.md  0003-honesty-contract.md  0004-money-in-integer-cents.md  0005-config-driven-provider-registry.md  README.md
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: icons.ts  sample.ts
frontend/src/lib/api/: backend.ts  backtest.ts  client.ts  pead.ts  settings.ts  types.ts
frontend/src/lib/chart/: PriceChart.svelte  time.ts
frontend/src/lib/components/: ConnectionStatus.svelte  Nav.svelte  SignalTable.svelte  UpdateBanner.svelte
frontend/src/lib/components/backtest/: BacktestForm.svelte  EquityCurve.svelte  MetricsPanel.svelte
frontend/src/lib/components/settings/: ScannerDefault.svelte  ThemeSelector.svelte  VendorKeys.svelte  WatchedSymbols.svelte
frontend/src/lib/realtime/: fmp-live.svelte.ts  signal-store.svelte.ts
frontend/src/lib/stores/: theme.svelte.ts
frontend/src/lib/updates/: updater.svelte.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/backtest/: +page.svelte
frontend/src/routes/pead/: +page.svelte  +page.ts
frontend/src/routes/settings/: +page.svelte
scripts/: generate_desktop_icon.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
