[project]
name = "intradayx"
version = "0.0.1"
description = "Self-learning intraday day-trading scanner & backtester (reversal + scalping), with honest, capability-gated attribution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Billy Ribeiro" }]

# Base deps: everything Phases 0-2 (scaffold + data layer + features + reversal
# signal engine + CLI) need. Heavier/optional stacks live in extras below so the
# first `uv sync` is fast and avoids fragile native builds until their phase.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "scipy>=1.13",
    "pyarrow>=16",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas-market-calendars>=4.4",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Phase 1 — Alpaca free-tier backbone (~7-10yr of free 1m bars)
alpaca = ["alpaca-py>=0.21"]
# Phase 3 — backtest+live runtime with parity
backtest = ["nautilus_trader>=1.200"]
# Phase 4 — CSV/PDF export
export = ["reportlab>=4.2", "matplotlib>=3.9"]
# Phase 5 — API + live websocket + scheduler
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "websockets>=12", "apscheduler>=3.10"]
# Phase 6 — the "self-learning culprit" ML stack (full arsenal)
ml = [
    "scikit-learn>=1.5",
    "lightgbm>=4.4",
    "xgboost>=2.1",
    "catboost>=1.2",
    "shap>=0.46",
    "imbalanced-learn>=0.12",
    "optuna>=3.6",
    "statsmodels>=0.14",
    "arch>=7.0",
    "tsfresh>=0.20",
    "ruptures>=1.1",
    "hmmlearn>=0.3",
    "skfolio>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
intradayx = "intradayx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intradayx"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Allow en-dashes and math symbols (≠, –) in prose/comments; we use them
# deliberately for readability. RUF001 (ambiguous chars in identifiers) stays on.
ignore = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
# The vendor SDKs (yfinance, alpaca-py) ship incomplete stubs; don't fail on them.
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpaca.*",
    "pandas",
    "pandas.*",
    "pandas_market_calendars.*",
    "duckdb.*",
    "reportlab.*",
    "matplotlib.*",
    "apscheduler.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "network: hits a real data vendor; skipped by default (run with -m network)",
]

[tool.coverage.run]
source = ["intradayx"]
